--- a/cmfront/src/_CSS/PageLayout.css
+++ b/cmfront/src/_CSS/PageLayout.css
@@ -27,6 +27,14 @@
     background-color: blueviolet;
 }
 
+.TableWrapper{
+    display: table;
+}
+
+.TableColumn{
+    display: table-column;
+}
+
 .HeaderButton {
     width: 150px;
     height: 50px;
